[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Npc/Toad/Toad.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/inputs/up0.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/inputs/up1.png" type="Texture" id=7]
[ext_resource path="res://Prefabs/Dialogue_System.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 3.4881 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.8, 14.9989 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="NPC_01" type="KinematicBody2D"]
collision_layer = 4096
collision_mask = 8
script = ExtResource( 5 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -3.5119 )
shape = SubResource( 2 )

[node name="RayCast1" type="RayCast2D" parent="."]
modulate = Color( 0.745098, 1, 0.345098, 1 )
position = Vector2( 5.02564, -12.8961 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 100, 0 )

[node name="RayCast2" type="RayCast2D" parent="."]
modulate = Color( 0.745098, 1, 0.345098, 1 )
position = Vector2( -5.00237, -12.8961 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( -100, 0 )

[node name="dialogue_area" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 0, -18.0287 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="dialogue_area"]
modulate = Color( 0.0980392, 0.431373, 0.752941, 1 )
position = Vector2( 9.53674e-07, 3.00105 )
scale = Vector2( 2.5, 1 )
shape = SubResource( 3 )

[node name="Input" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -43 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Input"]
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Dialogue_System" parent="." instance=ExtResource( 8 )]

[node name="Dialogue_Box" parent="Dialogue_System" index="0"]
last_dialog = 4

[connection signal="body_entered" from="dialogue_area" to="." method="_on_dialogue_area_body_entered"]
[connection signal="body_exited" from="dialogue_area" to="." method="_on_dialogue_area_body_exited"]

[editable path="Dialogue_System"]
